tests/typing/good/testfile-void-1.c
#include <stdbool.h>
#include <stdlib.h>
#include <stdio.h>
void f() { return f(); }
int main() {}

