tests/typing/bad/testfile-redef-7.c
#include <stdbool.h>
#include <stdlib.h>
#include <stdio.h>

int f(int x) { int x;}
int main() {}
